<resources>
    <string name="app_name">MovieReviewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">MovieReviewer</string>
    <string name="menu_option_main">Main</string>
    <string name="menu_option_favorite">Favorite</string>
    <string name="description_poster_item">Movie poster</string>
    <string name="add_to_favorite_button">Add to favorite button</string>
    <string name="label_title">Name:</string>
    <string name="label_original_title">Original name:</string>
    <string name="label_release_date">Release date:</string>
    <string name="label_overview">Overview</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_reviews">Reviews</string>
    <string name="icon_play_video">Icon play video</string>
</resources>